Updated Views for Unify

--- a/views/buyer_accept.erb
+++ b/views/buyer_accept.erb
@@ -1,3 +1,5 @@
+<div class="container content height-500">
+
 Hey there,<br>
 We're psyched for you! You've bought a cool piece of furniture without having to schlep across town, and here it is:<br>
 <h3><%= item.brand %> <%= item.type %></h3>
@@ -20,7 +22,7 @@ Don't like it? We'll take it back.
 </form>
 
 
-
+</div>
 
 
 
