--- a/views/buyer_order_confirmation.erb
+++ b/views/buyer_order_confirmation.erb
@@ -1,4 +1,5 @@
-<html>
+<div class="container content height-500">
+
 	Thanks, we'll start processing your order today.<br>
 	Get ready for liftoff!
-</html>
+</div>
