--- a/views/change_password.erb
+++ b/views/change_password.erb
@@ -1,32 +1,34 @@
-<h1>Change Password</h1>
 
-	<% if user.errors.any? %>
-		<div class="form-errors">
-			<h3>There were some errors with your login:</h3>
-			<ul class="error-messages">
-				<% user.errors.full_messages.each do |error_msg| %>
-					<li><%= error_msg %></li>
-				<% end %>
-			</ul>
-		</div>
-	<% end %>
+<div class="container content height-500">
+	<h1>Change Password</h1>
 
-<form id="change-password-form" method="POST" action="/users/<%= user.id %>/edit_password">
-<input type="hidden" name="_method" value="put">
+		<% if user.errors.any? %>
+			<div class="form-errors">
+				<h3>There were some errors with your login:</h3>
+				<ul class="error-messages">
+					<% user.errors.full_messages.each do |error_msg| %>
+						<li><%= error_msg %></li>
+					<% end %>
+				</ul>
+			</div>
+		<% end %>
 
-<div class="form-row">
-<label for="user-password">Password</label>
-<input id="current_password" type="password" name="password">
+	<form id="change-password-form" method="POST" action="/users/<%= user.id %>/edit_password">
+	<input type="hidden" name="_method" value="put">
+	<br>
+	<div class="form-row">
+	<label for="user-password">Password</label><br>
+	<input id="current_password" type="password" name="password">
+	</div>
+	<br>
+	<div class="form-row">
+	<label for="user[password]">New Password (Must be at least 6 characters)</label><br>
+	<input id="new_password" type="password" name="user[password]"><br>
+	<label for="user[password_confirmation]">Confirm New Password</label><br>
+	<input id="new_password_confirmation" type="password" name="user[password_confirmation]">
+	</div>
+	<br>
+	<button type="submit">Change Password</button>
+	</form>
 </div>
-
-<div class="form-row">
-<label for="user[password]">New Password (Must be at least 6 characters)</label>
-<input id="new_password" type="password" name="user[password]"><br>
-<label for="user[password_confirmation]">Confirm New Password</label>
-<input id="new_password_confirmation" type="password" name="user[password_confirmation]">
-</div>
-<br>
-<button type="submit">Change Password</button>
-</form>
-
 
