--- a/views/forgot_password.erb
+++ b/views/forgot_password.erb
@@ -1,3 +1,5 @@
+<div class="container content height-500">
+
 <h2>Reset Password</h2>
 
 <p>Enter your email, and we'll send you a new password:</p>
@@ -19,3 +21,5 @@
 	</div><br>
 	<button type="submit">Reset Password</button>
 </form>
+
+</div>
