--- a/views/return.erb
+++ b/views/return.erb
@@ -1,3 +1,6 @@
+<div class="container content height-500">
+
+
 Hey <%= order.buyer_name %>,<br><br>
 Sorry you didn't like your <%= order.item.type %>.<br>No worries! These things happen.<br>
 <h3>What happens now?</h3>
@@ -24,3 +27,5 @@ Changed my mind, all good.
 <button style="background-color:lightgreen" style="width:260;height:130">Rock on!</button>
 </form>
 </p>
+
+</div>
