--- a/views/admin.erb
+++ b/views/admin.erb
@@ -1,3 +1,6 @@
+<div class="container content height-500">
+
+
 <table border="1" cellspacing="1">
 	<tr>
 		<th> Order ID </th>
@@ -71,3 +74,5 @@
 
 <% end %>
 </table>
+
+</div>
