--- a/views/schedule_delivery.erb
+++ b/views/schedule_delivery.erb
@@ -1,47 +1,51 @@
-<style>
-.email {
-    border: 2px solid #a1a1a1;
-    padding: 10px 20px;
-    background: #dddddd;
-    width: 400px;
-    border-radius: 25px;
-}
-</style>
+<div class="container content height-500">
+
+  <style>
+  .email {
+      border: 2px solid #a1a1a1;
+      padding: 10px 20px;
+      background: #dddddd;
+      width: 400px;
+      border-radius: 25px;
+  }
+  </style>
 
 
-<a href="/Admin">Back</a><br>
+  <a href="/Admin">Back</a><br>
 
-<h3>Send Delivery Email to Shipper</h3>
+  <h3>Send Delivery Email to Shipper</h3>
 
-<form action="/ScheduleDelivery" method="post">
+  <form action="/ScheduleDelivery" method="post">
 
-<input name="order[id]" type="hidden" value= <%= order.id %> />
+  <input name="order[id]" type="hidden" value= <%= order.id %> />
 
-<div class="form-row">
-    <label>
-      <span>Shipper Name</span>
-      <input name="order[shipper_name]" type="text" size="30" value="Tom Shipper"/>
-    </label>
-</div><div class="form-row">
-    <label>
-      <span>Shipper Email</span>
-      <input name="order[shipper_email]" type="text" size="30" value="russell@adamm.net"/>
-    </label>
-</div>
-<div class="form-row">
-    <label>
-      <span>Shipper Phone</span>
-      <input name="order[shipper_phone]" type="text" size="30" value="4158598060"/>
-    </label>
-</div>
+  <div class="form-row">
+      <label>
+        <span>Shipper Name</span>
+        <input name="order[shipper_name]" type="text" size="30" value="Tom Shipper"/>
+      </label>
+  </div><div class="form-row">
+      <label>
+        <span>Shipper Email</span>
+        <input name="order[shipper_email]" type="text" size="30" value="russell@adamm.net"/>
+      </label>
+  </div>
+  <div class="form-row">
+      <label>
+        <span>Shipper Phone</span>
+        <input name="order[shipper_phone]" type="text" size="30" value="4158598060"/>
+      </label>
+  </div>
 
 
-<button type="submit">Send Shipper Email</button>
-</form>
-<hr>
-<h3>Email to be sent:</h3>
+  <button type="submit">Send Shipper Email</button>
+  </form>
+  <hr>
+  <h3>Email to be sent:</h3>
 
-<div class="email">
-<b>Subject:</b> CouchRocket: <%= order.item.brand %> <%= order.item.type %> delivery <%= order.target_delivery_date.strftime('%A, %B %d') %><br><br>
-<%= partial :'Emails/Shipper', :locals => { :order => order} %>
+  <div class="email">
+  <b>Subject:</b> CouchRocket: <%= order.item.brand %> <%= order.item.type %> delivery <%= order.target_delivery_date.strftime('%A, %B %d') %><br><br>
+  <%= partial :'Emails/Shipper', :locals => { :order => order} %>
+  </div>
+
 </div>
