--- a/views/layout.erb
+++ b/views/layout.erb
@@ -126,7 +126,7 @@
 
 
 <!--=== Shop Subscribe ===-->
-<div class="shop-subscribe">
+<!-- <div class="shop-subscribe">
     <div class="container">
         <div class="row">
             <div class="col-md-8 md-margin-bottom-20">
@@ -141,8 +141,8 @@
                 </div>
             </div>
         </div>
-    </div><!--/end container-->
-</div>
+    </div>
+</div> -->
 <!--=== End Shop Subscribe ===-->
 
 <!--=== Footer v4 ===-->
